# around-the-word

./: Jenkinsfile  README.md  pyproject.toml
around_the_word/: __main__.py  map_generator.py  nationality.py
src/around_the_word/: __main__.py  constants.py  map_generator.py  nationality.py  parsers.py
src/around_the_word/templates/: map.html.j2
tests/: test_map_generator.py  test_nationality.py  test_parsers.py
